tests/snapshots/yaml_suite_snapshots__yaml_suite_96L6_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: "Spec Example 2.14. In the folded scalars, newlines become spaces"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2761032"
  tags: spec folded scalar
  yaml: "--- >\n  Mark McGwire's\n  year was crippled\n  by a knee injury.\n"
  tree: "+STR\n +DOC ---\n  =VAL >Mark McGwire's year was crippled by a knee injury.\\n\n -DOC\n-STR\n"
  json: "\"Mark McGwire's year was crippled by a knee injury.\\n\"\n"
  dump: "--- >\n  Mark McGwire's year was crippled by a knee injury.\n"
