tests/snapshots/yaml_suite_snapshots__yaml_suite_96NN_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Leading tab content in literals
  from: "@ingydotnet"
  tags: indent literal whitespace
  yaml: "foo: |-\n ——»bar\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :foo\n   =VAL |\\tbar\n  -MAP\n -DOC\n-STR\n"
  json: "{\"foo\":\"\\tbar\"}\n"
  dump: "foo: |-\n  ——»bar\n"
- yaml: "foo: |-\n ——»bar∎\n"
