tests/snapshots/yaml_suite_snapshots__yaml_suite_96NN_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "foo: |-\n  ——»bar\n"
  from: "@ingydotnet"
  json: "{\"foo\":\"\\tbar\"}\n"
  name: Leading tab content in literals
  tags: indent literal whitespace
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :foo\n   =VAL |\\tbar\n  -MAP\n -DOC\n-STR\n"
  yaml: "foo: |-\n ——»bar\n"
- yaml: "foo: |-\n ——»bar∎\n"
