tests/snapshots/yaml_suite_snapshots__yaml_suite_98YD_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Spec Example 5.5. Comment Indicator
  from: "http://www.yaml.org/spec/1.2/spec.html#id2773032"
  tags: spec comment empty
  yaml: "# Comment only.\n"
  tree: "+STR\n-STR\n"
  json: ""
  dump: ""
