tests/snapshots/yaml_suite_snapshots__yaml_suite_98YD_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 5.5. Comment Indicator
  from: "http://www.yaml.org/spec/1.2/spec.html#id2773032"
  tags: spec comment empty
  yaml: "# Comment only.\n"
  tree: "+STR\n-STR\n"
  json: ""
  dump: ""
