tests/snapshots/yaml_suite_snapshots__yaml_suite_98YD_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: ""
  from: "http://www.yaml.org/spec/1.2/spec.html#id2773032"
  json: ""
  name: Spec Example 5.5. Comment Indicator
  tags: spec comment empty
  tree: "+STR\n-STR\n"
  yaml: "# Comment only.\n"
