tests/snapshots/yaml_suite_snapshots__yaml_suite_9BXH_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "---\n- \"single line\":\n  a: b\n- \"multi line\":\n  a: b\n"
  from: "@perlpunk"
  json: "[\n  {\n    \"single line\": null,\n    \"a\": \"b\"\n  },\n  {\n    \"multi line\": null,\n    \"a\": \"b\"\n  }\n]\n"
  name: Multiline doublequoted flow mapping key without value
  tags: double flow mapping
  tree: "+STR\n +DOC ---\n  +SEQ\n   +MAP {}\n    =VAL \"single line\n    =VAL :\n    =VAL :a\n    =VAL :b\n   -MAP\n   +MAP {}\n    =VAL \"multi line\n    =VAL :\n    =VAL :a\n    =VAL :b\n   -MAP\n  -SEQ\n -DOC\n-STR\n"
  yaml: "---\n- { \"single line\", a: b}\n- { \"multi\n  line\", a: b}\n"
